--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "just-react",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "styled-components": "^5.2.3",
-    "web-vitals": "^0.2.4"
+    "react-router-dom": "^6.2.0",
+    "react-scripts": "^5.0.0",
+    "styled-components": "^5.3.0",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
