--- a/package.json
+++ b/package.json
@@ -2,17 +2,6 @@
   "name": "react-just-react",
   "version": "0.1.2",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
-    "react-scripts": "^5.0.1",
-    "styled-components": "^6.0.1",
-    "web-vitals": "^3.3.2"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -36,5 +25,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.0.1",
+    "web-vitals": "^3.3.2"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8"
   }
 }
