--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.0.1",
     "web-vitals": "^3.3.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-router-dom": "^5.3.3",
     "prettier": "^2.8.8"
   }
 }
